content/nomad/v0.12.x/content/docs/job-specification/proxy.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Nomad and the Nomad logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/nomad/blob/-/LICENSE

layout: docs
page_title: proxy Stanza - Job Specification
sidebar_title: proxy
description: >-
  The "proxy" stanza allows specifying options for configuring
  sidecar proxies used in Consul Connect integration
---

# `proxy` Stanza

<Placement
  groups={['job', 'group', 'service', 'connect', 'sidecar_service', 'proxy']}
/>

The `proxy` stanza allows configuring various options for the sidecar proxy
managed by Nomad for [Consul
Connect](/docs/integrations/consul-connect). It is valid only
within the context of a `sidecar_service` stanza.

```hcl
job "countdash" {
  datacenters = ["dc1"]

  group "api" {
    network {
      mode = "bridge"
    }

    service {
      name = "count-api"
      port = "9001"

      connect {
        sidecar_service {
          proxy {}
        }
      }
    }

    task "web" {
      driver = "docker"

      config {
        image = "hashicorpnomad/counter-api:v2"
      }
    }
  }
}
```

## `proxy` Parameters

- `local_service_address` `(string: "127.0.0.1")` - The address the local service binds to. Useful to
  customize in clusters with mixed Connect and non-Connect services.
- `local_service_port` `(int:[port][])` - The port the local service binds to.
  Usually the same as the parent service's port, it is useful to customize in clusters with mixed
  Connect and non-Connect services
- `upstreams` <code>([upstreams][]: nil)</code> - Used to configure details of each upstream service that
  this sidecar proxy communicates with.
- `expose` <code>([expose]: nil)</code> - Used to configure expose path configuration for Envoy.
  See Consul's [Expose Paths Configuration Reference](https://www.consul.io/docs/connect/registration/service-registration.html#expose-paths-configuration-reference)
  for more information.
- `config` `(map: nil)` - Proxy configuration that's opaque to Nomad and
  passed directly to Consul. See [Consul Connect's
  documentation](https://www.consul.io/docs/connect/proxies/envoy.html#dynamic-configuration)
  for details.

## `proxy` Examples

The following example is a proxy specification that includes upstreams configuration.

```hcl
sidecar_service {
  proxy {
    upstreams {
      destination_name = "count-api"
      local_bind_port  = 8080
    }
  }
}
```

[job]: /docs/job-specification/job 'Nomad job Job Specification'
[group]: /docs/job-specification/group 'Nomad group Job Specification'
[task]: /docs/job-specification/task 'Nomad task Job Specification'
[interpolation]: /docs/runtime/interpolation 'Nomad interpolation'
[sidecar_service]: /docs/job-specification/sidecar_service 'Nomad sidecar service Specification'
[upstreams]: /docs/job-specification/upstreams 'Nomad upstream config Specification'
[port]: /docs/job-specification/network#port-parameters 'Nomad network port configuration'
[expose]: /docs/job-specification/expose 'Nomad proxy expose configuration'
